--- a/TP/TP_1_clone_spotify/app/src/main/AndroidManifest.xml
+++ b/TP/TP_1_clone_spotify/app/src/main/AndroidManifest.xml
@@ -9,7 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TP1CloneSpotify">
-        <activity android:name=".PlayerActivity" android:exported="true">
+        <activity
+            android:name=".PlaylistMenuActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".PlayerActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
